--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
     <link type="text/css" rel="stylesheet" href="//unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.css" />
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
+    rel="stylesheet"/>
+    <link rel="stylesheet" href="style.css">
     <!-- Load Vue followed by BootstrapVue, and BootstrapVueIcons -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <script src="//unpkg.com/vue@latest/dist/vue.min.js"></script>
