--- a/public/index.html
+++ b/public/index.html
@@ -34,5 +34,8 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
-</html>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@600&family=Roboto&display=swap');
+    </style>
+  </html>
 
