--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
       name="viewport"
       content="width=device-width,initial-scale=1.0,shrink-to-fit=no"
     />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" type="image/x-icon">
+    <!-- <link rel="icon" type="image/x-icon" href="public\background.jpg"> -->
     <link type="text/css" rel="stylesheet" href="//unpkg.com/bootstrap/dist/css/bootstrap.min.css" />
     <link type="text/css" rel="stylesheet" href="//unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.css" />
     <link
