--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <script src="//unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue-icons.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-vue@2.21.2/dist/bootstrap-vue.min.js"></script>
 
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Hungry Potter</title>
   </head>
   <body>
     <noscript>
